fix code line number misalignment

--- a/_sass/tale/components/_code.scss
+++ b/_sass/tale/components/_code.scss
@@ -51,6 +51,7 @@ pre code {
 
   td {
     padding: 0;
+    vertical-align: top;
   }
 
   .lineno {
